Move bdcs-api-server into src/bin
Make it clearer what's library and what's binary.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ license = "GPL-3.0"
 
 [[bin]]
 name = "bdcs-api-server"
-path = "src/main.rs"
+path = "src/bin/bdcs-api-server.rs"
 
 [[bin]]
 name = "depclose"
